--- a/data/interfaces/default/recently_added.html
+++ b/data/interfaces/default/recently_added.html
@@ -185,8 +185,8 @@ DOCUMENTATION :: END
     </div>
 </div>
 % else:
-<div id="dashboard-no-recently-added" class="text-muted" style="height: 288px; margin-bottom: 25px;">No recently added items.</div>
+<div id="dashboard-no-recently-added" class="text-muted" style="height: 288px; margin-bottom: 25px;">最近没有添加的项目。</div>
 % endif
 % else:
-<div class="text-muted">There was an error communicating with your Plex Server.</div><br>
+<div class="text-muted">与您的 Plex 服务器通信时发生错误。</div><br>
 % endif
