--- a/data/interfaces/default/graphs.html
+++ b/data/interfaces/default/graphs.html
@@ -51,11 +51,11 @@
                     <div class="col-md-12">
                         <h4><i class="fa fa-history"></i> Daily <span class="yaxis-text" style="text-transform: lowercase;">play count</span> by media type <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The total play count or duration of tv, movies, and music played per day. Click a graph point to open up a list of items played for that specific date.
+                            每天播放的电视、电影和音乐的总播放次数或时长。点击图表上的一个点，可以打开播放该特定日期的项目列表。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_day">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...</div>
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...</div>
                                 <br>
                             </div>
                         </div>
@@ -65,12 +65,12 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-calendar"></i> <span class="yaxis-text">Play count</span> by day of week <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music played per day of the week.
+                            每周每天播放的电视、电影和音乐的总时长。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_dayofweek" style="float: left;">
                                 <div class="graphs-load">
-                                    <i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                    <i class="fa fa-refresh fa-spin"></i> 加载图表中...
                                 </div>
                                 <br>
                             </div>
@@ -79,12 +79,12 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-clock-o"></i> <span class="yaxis-text">Play count</span> by hour of day <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music played per hour of the day.
+                            每小时播放的电视、电影和音乐的总时长。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_hourofday">
                                 <div class="graphs-load">
-                                    <i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                    <i class="fa fa-refresh fa-spin"></i> 加载图表中...
                                 </div>
                                 <br>
                             </div>
@@ -95,7 +95,7 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-television"></i> <span class="yaxis-text">Play count</span> by top 10 platforms <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music played by top 10 most active platforms.
+                            排名前十的最活跃平台播放的电视、电影和音乐的总量。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_platform" style="float: left;">
@@ -109,7 +109,7 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-user"></i> <span class="yaxis-text">Play count</span> by top 10 users <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music played by top 10 most active users.
+                            最活跃的10个用户播放的电视、电影和音乐的总和。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_user">
@@ -127,11 +127,11 @@
                     <div class="col-md-12">
                         <h4><i class="fa fa-video-camera"></i> Daily <span class="yaxis-text" style="text-transform: lowercase;">play count</span> by stream type <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The total play count or duration of tv, movies, and music by the transcode decision. Click a graph point to open up a list of items played for that specific date.
+                            通过转码决策，电视、电影和音乐的总播放次数或持续时间。点击图表上的一个点，可以打开播放该特定日期的项目列表。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_stream_type">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...</div>
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...</div>
                                 <br>
                             </div>
                         </div>
@@ -141,11 +141,11 @@
                     <div class="col-md-12">
                         <h4><i class="fa fa-video-camera"></i> Daily concurrent stream count</span> by stream type <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The total count of concurrent streams of tv, movies, and music by the transcode decision.
+                            通过转码决策，电视、电影和音乐的并发流总数。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_concurrent_streams_by_stream_type">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...</div>
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...</div>
                                 <br>
                             </div>
                         </div>
@@ -155,11 +155,11 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-expand-arrows-alt"></i> <span class="yaxis-text">Play count</span> by source resolution <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv and movies by their original resolution (pre-transcoding).
+                            原始分辨率（转码前）下的电视和电影的总和。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_source_resolution" style="float: left;">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...
                                 </div>
                                 <br>
                             </div>
@@ -168,11 +168,11 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-expand-arrows-alt"></i> <span class="yaxis-text">Play count</span> by stream resolution <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv and movies by their streamed resolution (post-transcoding).
+                            通过流媒体分辨率（转码后）来计算电视和电影的总数。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_stream_resolution">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...
                                 </div>
                                 <br>
                             </div>
@@ -183,11 +183,11 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-television"></i> <span class="yaxis-text">Play count</span> by platform and stream type <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music by platform and stream type.
+                            各平台和流媒体类型的电视、电影和音乐的总量。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_platform_by_stream_type" style="float: left;">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载中...
                                 </div>
                                 <br>
                             </div>
@@ -196,11 +196,11 @@
                     <div class="col-md-6">
                         <h4><i class="fa fa-user"></i> <span class="yaxis-text">Play count</span> by user and stream type <small>Last <span class="days">30</span> days</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music by user and stream type.
+                            用户和流媒体类型的电视、电影和音乐的总和。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_user_by_stream_type" style="float: left;">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 加载图表中...
                                 </div>
                                 <br>
                             </div>
@@ -213,11 +213,11 @@
                     <div class="col-md-12">
                         <h4><i class="fa fa-calendar"></i> Total <span class="yaxis-text" style="text-transform: lowercase;">play count</span> by month <small>Last <span class="months">12</span> months</small></h4>
                         <p class="help-block">
-                            The combined total of tv, movies, and music by month.
+                            每月电视、电影和音乐的总和。
                         </p>
                         <div class="graphs-instance">
                             <div class="watch-chart" id="graph_plays_by_month">
-                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> Loading chart...
+                                <div class="graphs-load"><i class="fa fa-refresh fa-spin"></i> 正在加载图表...
                                 </div>
                                 <br>
                             </div>
