--- a/data/interfaces/default/libraries.html
+++ b/data/interfaces/default/libraries.html
@@ -10,17 +10,17 @@
 <div class='container-fluid'>
     <div class='table-card-header'>
         <div class="header-bar">
-            <span id="libraries-xml"><i class="fa fa-book"></i> All Libraries</span>
+            <span id="libraries-xml"><i class="fa fa-book"></i> 所有库</span>
         </div>
         <div class="button-bar">
             % if _session['user_group'] == 'admin':
             <div class="btn-group">
                 <button class="btn btn-danger btn-edit" data-toggle="button" aria-pressed="false" autocomplete="off" id="row-edit-mode">
-                    <i class="fa fa-pencil"></i> Edit mode
+                    <i class="fa fa-pencil"></i> 编辑模式
                 </button>
             </div>
             <div class="btn-group">
-                <button class="btn btn-dark refresh-libraries-button" id="refresh-libraries-list"><i class="fa fa-refresh"></i> Refresh libraries</button>
+                <button class="btn btn-dark refresh-libraries-button" id="refresh-libraries-list"><i class="fa fa-refresh"></i> 刷新库</button>
             </div>
             % endif
             <div class="btn-group colvis-button-bar"></div>
@@ -30,17 +30,17 @@
         <table id="libraries_list_table" class="display" width="100%">
             <thead>
             <tr>
-                <th align="left" id="edit_row">Edit</th>
+                <th align="left" id="edit_row">编辑</th>
                 <th align="right" id="library_thumb"></th>
-                <th align="left" id="section_name">Library Name</th>
-                <th align="left" id="section_type">Library Type</th>
-                <th align="left" id="count">Total Movies / TV Shows / Artists</th>
-                <th align="left" id="parent_count">Total Seasons / Albums</th>
-                <th align="left" id="child_count">Total Episodes / Tracks</th>
-                <th align="left" id="last_accessed">Last Streamed</th>
-                <th align="left" id="last_played">Last Played</th>
-                <th align="left" id="total_plays">Total Plays</th>
-                <th align="left" id="total_duration">Total Played Duration</th>
+                <th align="left" id="section_name">名称</th>
+                <th align="left" id="section_type">类型</th>
+                <th align="left" id="count">总电影/电视剧/艺术家数</th>
+                <th align="left" id="parent_count">总季数/专辑数</th>
+                <th align="left" id="child_count">总集数/曲目</th>
+                <th align="left" id="last_accessed">最近直播</th>
+                <th align="left" id="last_played">上次播放</th>
+                <th align="left" id="total_plays">总播放次数</th>
+                <th align="left" id="total_duration">总播放时长</th>
             </tr>
             </thead>
             <tbody>
@@ -57,16 +57,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-remove"></i></button>
-                <h4 class="modal-title" id="myModalLabel">Confirm Delete/Purge</h4>
+                <h4 class="modal-title" id="myModalLabel">确认删除/清除</h4>
             </div>
             <div class="modal-body" style="text-align: center;">
                 <ul id="libraries-to-delete" class="list-unstyled"></ul>
                 <ul id="libraries-to-purge" class="list-unstyled"></ul>
-                <p>This is permanent and cannot be undone!</p>
+                <p>这是永久性的，无法撤销！</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-dark" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-delete">Confirm</button>
+                <button type="button" class="btn btn-dark" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-danger btn-ok" data-dismiss="modal" id="confirm-delete">确认</button>
             </div>
         </div>
     </div>
